Kube-Manifest/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: windows-app-service
spec:
  selector:
    app: windows-app
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
  type: ClusterIP
